--- a/pages/about.html
+++ b/pages/about.html
@@ -41,5 +41,6 @@
         </footer>
     </div>
 </body>
-
+<script src="../scripts/p5.js"></script>
+<script src="../scripts/sketch.js"></script>
 </html>
