--- a/pages/posts.html
+++ b/pages/posts.html
@@ -9,6 +9,7 @@
 
 <body>
     <div class="container">
+	<canvas id="background"></canvas>
         <picture>
             <img src="https://avatars.githubusercontent.com/u/39070317?v=4" alt="berserk">
         </picture>
