--- a/pages/posts.html
+++ b/pages/posts.html
@@ -27,7 +27,7 @@
                 <li>
                     <post>
                         <img src="../thumbnails/algorithms.jpg" alt="algorithms">
-                        <a>A deep journey into algorithms</a>
+                        <a href="../posts/algorithmicjourney.html">A deep journey into algorithms</a>
                     </post>
                 </li>
             </ul>
